@@ -4,6 +4,7 @@ $Id$
         * Made tests run clean under warnings.
 	* Closed a file that failed when trying to delete it under
 	  Windows.  (Thanks Mike O'Regan)
+	* Added POD tests.
 
 0.91 - Wed Dec 11 00:48:55 2002
 	* require ExtUtils::MakeMaker 6.x so the right run_tests is 
